# snaketrade

./: .gitignore  README.rst  RELEASES.rst  pyproject.toml  requirements.txt  setup.cfg
snaketrade/: account.py  app.py  auth.py  market.py  snaketradeutils.py
snaketrade/templates/: home.html
tests/: test_account.py  test_auth.py  test_market.py  test_snaketradeutils.py
