[metadata]
name = snaketrade
url = https://github.com/Perceptua/snaketrade
author = Aphorikles
author_email = perceptua.blue@gmail.com
description = Automated trading with Python & the E-Trade API.
long_description = file: README.rst, RELEASES.rst, LICENSE.rst
license = MIT
keywords = trading, options, stocks, API, E-Trade

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    flask
    rauth
    
[options.packages.find]
exclude =
    build*
    docs*
    htmlcov*
    indexia.egg-info*
    tests*